--- a/public_html/resources/products/edit.html
+++ b/public_html/resources/products/edit.html
@@ -1,3 +1,4 @@
 	<ui-input-text id="edtName" field="Name" value="rec.Name"></ui-input-text>
 	<ui-input-memo id="edtDescription" field="Description" value="rec.Description"></ui-input-memo>
 	<ui-input-number id="edtPrice" field="Price" value="rec.Price" size="4"></ui-input-number>
+	<ui-input-check id="chkService" field="Is_Service" value="rec.Is_Service" size="4"></ui-input-check>
