Update of Libraries
- Updated libraries and some files realocated.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,11 +13,12 @@
 
 	<link href="./css/style.css" rel="stylesheet">
 	<link href="./css/ui.css" rel="stylesheet">
+	<script src="./lib/util-functions.min.js"></script>
 	<script src="./lib/date-functions.min.js"></script>
 	<script src="./lib/format-functions.min.js"></script>
 
 	<script src="./lib/require.js"></script>
-	<script src="./lib/jquery-3.3.1.min.js"></script>
+	<script src="./lib/jquery/jquery-3.3.1.min.js"></script>
 	<script src="./lib/bootstrap/bootstrap.min.js"></script>
 	<script src="./lib/bootstrap/bootstrap-datetimepicker.min.js"></script>
 
@@ -26,7 +27,7 @@
 	<script src="./lib/angular/angular-route.min.js"></script>
 
 	<script src="./lib/slide-menu.js"></script>
-	<script src="./lib/modal-control-focus.js"></script>
+	<script src="./lib/modal-helper.js"></script>
 	<script src="./config.js"></script>
 	<script src="./app/core/services/restAPI.js"></script>
 	<script src="./app/core/services/routeResolver.js"></script>
