--- a/public_html/resources/dashboard/view.html
+++ b/public_html/resources/dashboard/view.html
@@ -7,8 +7,8 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h1>{{costumerCount}}</h1>
-						<h4>{{::(lang.l["res_dashboard"]["costumerCount"] || "Costumers Count")}}</h4>
+						<h1>{{costumersCount}}</h1>
+						<h4>{{::(lang.l["res_dashboard"]["costumersCount"] || "Costumers Count")}}</h4>
 						<a href="#!/costumers">{{::(lang.l["res_dashboard"]["seeCostumers"] || "See costumers")}}</a>
 					</div>
 				</div>
