--- a/public_html/login/index.html
+++ b/public_html/login/index.html
@@ -15,9 +15,7 @@
 	<script src="./app/app.js"></script>
 	<script src="./app/controllers/loginCtrl.js"></script>
 
-
-
-	<script src="../lib/jquery-3.1.1.min.js"></script>
+	<script src="../lib/jquery/jquery-3.3.1.min.js"></script>
 	<script src="../lib/slide-menu.js"></script>
 	<script src="../lib/bootstrap/bootstrap.min.js"></script>
 
