Refactored System Tables Names
- Refactored System Table names in config.js and in all project.

--- a/public_html/login/index.html
+++ b/public_html/login/index.html
@@ -66,8 +66,8 @@
 
 					  <button type="submit" class="btn btn-primary btn-block btn-lg" ng-click="login()" ng-disabled="login_button_disabled">Sign in</button>
 					</form>
-					<div class="lostaccount">
-						<a href="/lostaccount">I forgot my password</a>
+					<div class="lostpassword">
+						<a href="/lostpassword">I forgot my password</a>
 					</div>
 				</div>
 			</div>
